--- a/clase08  (Animaciones y Transformaciones)/css/main.css
+++ b/clase08  (Animaciones y Transformaciones)/css/main.css
@@ -72,3 +72,8 @@ img{
         transform: rotate(360deg);
     }
 }
+/* animaciones para el desafio */
+h1:hover{
+    background-color: aqua;
+    font-size: 50px;
+}
